# Compbio-Grader

./: pyproject.toml
compbio_grader/: __init__.py  checks.py  checks2.py
compbio_grader/exercise_blocks/: check_approximatepatterncount.py  check_ecoli_clumps_count.py  check_ecoli_ori.py  check_frequentwords_approx_with_rc.py  check_frequentwordsapproximate.py  check_genome_scan.py  check_minimumskew.py  check_neighbors.py  check_patternmatching.py  check_reversecomplement.py  check_skew.py
