[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compbio-grader"
version = "0.1.4"
description = "Hidden grader for the CompBio workshop (single exercise)"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["compbio_grader"]  # <-- simplest and explicit
