[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compbio-grader"
version = "0.2.3"
description = "Hidden grader for the CompBio workshops"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["compbio_grader"]  # <-- simplest and explicit
